# deeper-seek

./: .gitignore  README.md  README_SETUP.md  alphaearth_similarity_viewer.js  earth_engine_handler.py  index.html  main.py  openai_query_converter.py  pyproject.toml  ruff.toml  server.py
.cursor/: scratchpad.md
deeper_seek/: __init__.py
frontend/: README.md  app.js  deploy.md  geospatial.js  index.html  package.json  script.js  style.css  styles.css
frontend_old/: geoguessr.html  geospatial.js  results.html
training/: README.md  clean_csv.py  latlon_to_location_embeddings.py  test.py  train.py
