[project]
name = "deeper-seek"
version = "0.1.0"
description = "Geospatial similarity search using satellite imagery and Google Earth Engine"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "earthengine-api>=0.1.37",
    "geemap>=0.29.0",
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "matplotlib>=3.5.0",
    "jupyter>=1.0.0",
    "folium>=0.14.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "openai>=0.28.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["deeper_seek"]
